# soil_capacity_wilting

./: README.md  pyproject.toml
soil_capacity_wilting/: __init__.py  soil_capacity_wilting.py
soil_grids/: __init__.py
